@@ -2,6 +2,9 @@
   * Bug #1959846, #2760666: Don't crash the host, if an other virtualization
   runs in VMX mode.
 
+  Console and daemons:
+  * New: NT console WinKey+V paste keys from clipboard. (Vladislav Grishenko)
+
   Updated libraries and tools:
   * w32api 3.13
 
